--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
 		"react-bootstrap": "^2.7.4",
 		"react-dom": "^18.2.0",
 		"react-router": "^6.14.0",
-		"reading-time": "^1.5.0"
+		"reading-time": "^1.5.0",
+		"sass": "^1.79.5"
 	},
 	"devDependencies": {
 		"@resvg/resvg-js": "^2.6.2",
