--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
 		"astro": "npx astro"
 	},
 	"dependencies": {
-		"@astrojs/mdx": "^1.1.3",
+		"@astrojs/check": "^0.9.4",
+		"@astrojs/mdx": "^3.1.9",
 		"@astrojs/react": "^3.0.4",
 		"@astrojs/rss": "^3.0.0",
 		"@astrojs/sitemap": "^3.0.2",
 		"@fontsource/roboto": "^5.0.12",
 		"@types/bootstrap": "^5.2.6",
-		"astro": "^3.3.4",
-		"astro-bootstrap": "^0.6.1",
+		"astro": "^4.16.10",
+		"astro-bootstrap": "^0.7.0",
 		"bootstrap": "^5.3.0",
 		"bootstrap-icons": "^1.10.5",
 		"classnames": "^2.3.2",
@@ -43,7 +44,7 @@
 		"@vitejs/plugin-react-swc": "^3.0.0",
 		"satori": "^0.10.13",
 		"sharp": "^0.33.3",
-		"typescript": "^5.2.2",
+		"typescript": "^5.6.3",
 		"vite": "^4.2.0"
 	}
 }
