--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
 		"@types/react-dom": "^18.2.6",
 		"@types/three": "^0.150.0",
 		"@vitejs/plugin-react-swc": "^3.0.0",
+		"prettier": "^3.3.3",
+		"prettier-plugin-astro": "^0.14.1",
 		"satori": "^0.10.13",
 		"sharp": "^0.33.3",
 		"typescript": "^5.6.3",
