--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"bootstrap": "^5.3.0",
 		"bootstrap-icons": "^1.10.5",
 		"classnames": "^2.3.2",
+		"katex": "^0.16.11",
 		"mdast-util-to-string": "^4.0.0",
 		"moment": "^2.29.4",
 		"png-to-ico": "^2.1.8",
@@ -34,6 +35,8 @@
 		"react-dom": "^18.2.0",
 		"react-router": "^6.14.0",
 		"reading-time": "^1.5.0",
+		"rehype-katex": "^7.0.1",
+		"remark-math": "^6.0.0",
 		"sass": "^1.79.5"
 	},
 	"devDependencies": {
