--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,22 @@
 	"extends": "astro/tsconfigs/strictest",
 	"compilerOptions": {
 		"jsx": "react-jsx",
-		"jsxImportSource": "react"
+		"jsxImportSource": "react",
 		// "allowImportingTsExtensions": true
+		"baseUrl": ".",
+		"paths": {
+			"@components/*": [
+				"./src/components/*"
+			],
+			"@scripts/*": [
+				"./src/scripts/*"
+			],
+			"@layouts/*": [
+				"./src/layouts/*"
+			]
+		}
 	},
-	"exclude": ["old/*"]
+	"exclude": [
+		"old/*"
+	]
 }
